- Added backlinks in headers - Restructured directory style to provide releasing by date for chapters (using posts). I acheived this by switching chapters from being documents in collections to being posts - Removed the publishing self note file in the book collection because it is no longer useful wth the new structure - Removed visible scrollbars using css styling - Adjusted the chapter text font size again - Cleaned up some general styling, formatting, and naming conventions in files

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -2,7 +2,20 @@ $backgroundColor: black;
 $bodyColor: white;
 $bodyFont: courier new, monospace;
 
+body::-webkit-scrollbar {
+    // exeperimental
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    display: none;
+}
+
 body {
+    // expirimental
+
+    // hide scrollbar
+
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none;
+
     margin: 0;
     background-color: $backgroundColor;
     color: $bodyColor;
@@ -89,7 +102,9 @@ section.chapter h3 {
 }
 
 section.chapter p {
-    font-size: 23px;
+    //font-size: 23px;
+    font-size: 21px;
+
     font-weight: bold;
     line-height: 1.5em;
     margin-top: 2em;
